connect to database

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
