--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
